--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -4,25 +4,22 @@
 @import './base/typography';
 
 @import './components/blog';
-@import './components/buttons';
 @import './components/form';
+@import './components/goup';
 @import './components/hero';
 @import './components/paragraph';
-@import './components/slider';
 @import './components/textBox';
 
 @import './layout/footer';
 @import './layout/forms';
 @import './layout/grid';
 @import './layout/header';
-@import './layout/navbar';
 
 @import './pages/about';
 @import './pages/beachbod';
 @import './pages/calculator';
 @import './pages/contact';
 @import './pages/home';
-@import './pages/leaneating';
 @import './pages/lifestyle';
 @import './pages/mythsbusted';
 @import './pages/pillars';
