--- a/css/styles.css
+++ b/css/styles.css
@@ -375,6 +375,36 @@ h6 {
   .form__submit:hover {
     background-color: #45a049; }
 
+/* ---------- | go back button | ----------  */
+.go_up {
+  display: inline-block;
+  text-transform: uppercase;
+  font-size: 1rem;
+  width: 100px;
+  padding: 0.8rem;
+  background: #0EC99D;
+  color: #fff;
+  cursor: pointer;
+  border: none;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 999; }
+  .go_up:before {
+    position: absolute;
+    transition: transform 0.5s ease-in;
+    margin-left: 5px; }
+  .go_up:hover {
+    background-color: #9562b6; }
+
+.goIngre {
+  position: fixed;
+  right: 15px;
+  bottom: 15px;
+  margin: 0; }
+  .goIngre a {
+    text-decoration: none; }
+
 .container {
   width: 90%;
   margin-left: auto;
@@ -1489,7 +1519,7 @@ h6 {
       background-color: #0EC99D;
       color: white; }
   .navbar__button {
-    color: pink;
+    color: #0EC99D;
     margin-right: 15px; }
 
 .navbar.responsive .navbar__list {
@@ -2596,189 +2626,6 @@ h6 {
       max-width: 100%; }
     .sliderImg__text {
       display: none; } }
-
-.container {
-  width: 90%;
-  margin-left: auto;
-  margin-right: auto; }
-  @media only screen and (min-width: 540px) {
-    .container {
-      width: 90%; } }
-  @media only screen and (min-width: 769px) {
-    .container {
-      width: 90%; } }
-  @media only screen and (min-width: 960px) {
-    .container {
-      width: 85%; } }
-  @media only screen and (min-width: 1200px) {
-    .container {
-      width: 80%; } }
-
-.row {
-  position: relative;
-  width: 100%; }
-
-.row [class^="col"] {
-  float: left;
-  margin: 0.5rem 1%;
-  min-height: 0.125rem;
-  padding: 0 1%; }
-
-.row::after {
-  content: "";
-  display: table;
-  clear: both; }
-
-.col {
-  width: 96%; }
-
-.col-1 {
-  width: 4.33333%; }
-
-.col-2 {
-  width: 12.66667%; }
-
-.col-3 {
-  width: 21%; }
-
-.col-4 {
-  width: 29.33333%; }
-
-.col-5 {
-  width: 37.66667%; }
-
-.col-6 {
-  width: 46%; }
-
-.col-7 {
-  width: 54.33333%; }
-
-.col-8 {
-  width: 62.66667%; }
-
-.col-9 {
-  width: 71%; }
-
-.col-10 {
-  width: 79.33333%; }
-
-.col-11 {
-  width: 87.33333%; }
-
-.col-12 {
-  width: 96%; }
-
-@media only screen and (min-width: 540px) {
-  .col-sm {
-    width: 96%; }
-  .col-1-sm {
-    width: 4.33333%; }
-  .col-2-sm {
-    width: 12.66667%; }
-  .col-3-sm {
-    width: 21%; }
-  .col-4-sm {
-    width: 29.33333%; }
-  .col-5-sm {
-    width: 37.66667%; }
-  .col-6-sm {
-    width: 46%; }
-  .col-7-sm {
-    width: 54.33333%; }
-  .col-8-sm {
-    width: 62.66667%; }
-  .col-9-sm {
-    width: 71%; }
-  .col-10-sm {
-    width: 79.33333%; }
-  .col-11-sm {
-    width: 87.33333%; }
-  .col-12-sm {
-    width: 96%; } }
-
-@media only screen and (min-width: 769px) {
-  .col-md {
-    width: 96%; }
-  .col-1-md {
-    width: 4.33333%; }
-  .col-2-md {
-    width: 12.66667%; }
-  .col-3-md {
-    width: 21%; }
-  .col-4-md {
-    width: 29.33333%; }
-  .col-5-md {
-    width: 37.66667%; }
-  .col-6-md {
-    width: 46%; }
-  .col-7-md {
-    width: 54.33333%; }
-  .col-8-md {
-    width: 62.66667%; }
-  .col-9-md {
-    width: 71%; }
-  .col-10-md {
-    width: 79.33333%; }
-  .col-11-md {
-    width: 87.33333%; }
-  .col-12-md {
-    width: 96%; } }
-
-@media only screen and (min-width: 960px) {
-  .col-lg {
-    width: 96%; }
-  .col-1-lg {
-    width: 4.33333%; }
-  .col-2-lg {
-    width: 12.66667%; }
-  .col-3-lg {
-    width: 21%; }
-  .col-4-lg {
-    width: 29.33333%; }
-  .col-5-lg {
-    width: 37.66667%; }
-  .col-6-lg {
-    width: 46%; }
-  .col-7-lg {
-    width: 54.33333%; }
-  .col-8-lg {
-    width: 62.66667%; }
-  .col-9-lg {
-    width: 71%; }
-  .col-10-lg {
-    width: 79.33333%; }
-  .col-11-lg {
-    width: 87.33333%; }
-  .col-12-lg {
-    width: 96%; } }
-
-@media only screen and (min-width: 1200px) {
-  .col-xl {
-    width: 96%; }
-  .col-1-xl {
-    width: 4.33333%; }
-  .col-2-xl {
-    width: 12.66667%; }
-  .col-3-xl {
-    width: 21%; }
-  .col-4-xl {
-    width: 29.33333%; }
-  .col-5-xl {
-    width: 37.66667%; }
-  .col-6-xl {
-    width: 46%; }
-  .col-7-xl {
-    width: 54.33333%; }
-  .col-8-xl {
-    width: 62.66667%; }
-  .col-9-xl {
-    width: 71%; }
-  .col-10-xl {
-    width: 79.33333%; }
-  .col-11-xl {
-    width: 87.33333%; }
-  .col-12-xl {
-    width: 96%; } }
 
 .container {
   width: 90%;
